src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> All
Rule 1     All -> NOTE Pitch Quality Elements Inversion
Rule 2     Pitch -> PITCH
Rule 3     Pitch -> <empty>
Rule 4     Quality -> MIN
Rule 5     Quality -> AUG
Rule 6     Quality -> DIM
Rule 7     Quality -> HALF_DIM7
Rule 8     Quality -> <empty>
Rule 9     Elements -> Elements Element
Rule 10    Elements -> <empty>
Rule 11    Element -> SUS SusAux
Rule 12    Element -> ADD AddAux
Rule 13    Element -> OMIT OmitAux
Rule 14    Element -> LPAREN SetElems RPAREN
Rule 15    Element -> SIX_NINE
Rule 16    Element -> MAJ MajorType
Rule 17    Element -> Number
Rule 18    Element -> PitchNumber
Rule 19    MajorType -> SEVEN
Rule 20    MajorType -> NINE
Rule 21    MajorType -> ELEVEN
Rule 22    MajorType -> THIRTEEN
Rule 23    PitchNumber -> PITCH Number
Rule 24    Number -> TWO
Rule 25    Number -> THREE
Rule 26    Number -> FOUR
Rule 27    Number -> FIVE
Rule 28    Number -> SIX
Rule 29    Number -> SEVEN
Rule 30    Number -> NINE
Rule 31    Number -> ELEVEN
Rule 32    Number -> THIRTEEN
Rule 33    SusAux -> PITCH SusNumber
Rule 34    SusAux -> SusNumber
Rule 35    SusNumber -> TWO
Rule 36    SusNumber -> FOUR
Rule 37    AddAux -> TWO
Rule 38    AddAux -> FOUR
Rule 39    AddAux -> SIX
Rule 40    AddAux -> NINE
Rule 41    AddAux -> ELEVEN
Rule 42    AddAux -> THIRTEEN
Rule 43    OmitAux -> THREE
Rule 44    OmitAux -> FIVE
Rule 45    SetElems -> SetElems COMMA SetElem
Rule 46    SetElems -> SetElem
Rule 47    SetElem -> PITCH Number
Rule 48    SetElem -> Number
Rule 49    SetElem -> OMIT OmitAux
Rule 50    Inversion -> SLASH NOTE
Rule 51    Inversion -> SLASH NOTE PITCH
Rule 52    Inversion -> <empty>

Terminals, with rules where they appear

ADD                  : 12
AUG                  : 5
COMMA                : 45
DIM                  : 6
ELEVEN               : 21 31 41
FIVE                 : 27 44
FOUR                 : 26 36 38
HALF_DIM7            : 7
LPAREN               : 14
MAJ                  : 16
MIN                  : 4
NINE                 : 20 30 40
NOTE                 : 1 50 51
OMIT                 : 13 49
PITCH                : 2 23 33 47 51
RPAREN               : 14
SEVEN                : 19 29
SIX                  : 28 39
SIX_NINE             : 15
SLASH                : 50 51
SUS                  : 11
THIRTEEN             : 22 32 42
THREE                : 25 43
TWO                  : 24 35 37
error                : 

Nonterminals, with rules where they appear

AddAux               : 12
All                  : 0
Element              : 9
Elements             : 1 9
Inversion            : 1
MajorType            : 16
Number               : 17 23 47 48
OmitAux              : 13 49
Pitch                : 1
PitchNumber          : 18
Quality              : 1
SetElem              : 45 46
SetElems             : 14 45
SusAux               : 11
SusNumber            : 33 34

Parsing method: LALR

state 0

    (0) S' -> . All
    (1) All -> . NOTE Pitch Quality Elements Inversion

    NOTE            shift and go to state 2

    All                            shift and go to state 1

state 1

    (0) S' -> All .



state 2

    (1) All -> NOTE . Pitch Quality Elements Inversion
    (2) Pitch -> . PITCH
    (3) Pitch -> .

  ! shift/reduce conflict for PITCH resolved as shift
    PITCH           shift and go to state 4
    MIN             reduce using rule 3 (Pitch -> .)
    AUG             reduce using rule 3 (Pitch -> .)
    DIM             reduce using rule 3 (Pitch -> .)
    HALF_DIM7       reduce using rule 3 (Pitch -> .)
    SLASH           reduce using rule 3 (Pitch -> .)
    SUS             reduce using rule 3 (Pitch -> .)
    ADD             reduce using rule 3 (Pitch -> .)
    OMIT            reduce using rule 3 (Pitch -> .)
    LPAREN          reduce using rule 3 (Pitch -> .)
    SIX_NINE        reduce using rule 3 (Pitch -> .)
    MAJ             reduce using rule 3 (Pitch -> .)
    TWO             reduce using rule 3 (Pitch -> .)
    THREE           reduce using rule 3 (Pitch -> .)
    FOUR            reduce using rule 3 (Pitch -> .)
    FIVE            reduce using rule 3 (Pitch -> .)
    SIX             reduce using rule 3 (Pitch -> .)
    SEVEN           reduce using rule 3 (Pitch -> .)
    NINE            reduce using rule 3 (Pitch -> .)
    ELEVEN          reduce using rule 3 (Pitch -> .)
    THIRTEEN        reduce using rule 3 (Pitch -> .)
    $end            reduce using rule 3 (Pitch -> .)

  ! PITCH           [ reduce using rule 3 (Pitch -> .) ]

    Pitch                          shift and go to state 3

state 3

    (1) All -> NOTE Pitch . Quality Elements Inversion
    (4) Quality -> . MIN
    (5) Quality -> . AUG
    (6) Quality -> . DIM
    (7) Quality -> . HALF_DIM7
    (8) Quality -> .

    MIN             shift and go to state 6
    AUG             shift and go to state 7
    DIM             shift and go to state 8
    HALF_DIM7       shift and go to state 9
    SLASH           reduce using rule 8 (Quality -> .)
    SUS             reduce using rule 8 (Quality -> .)
    ADD             reduce using rule 8 (Quality -> .)
    OMIT            reduce using rule 8 (Quality -> .)
    LPAREN          reduce using rule 8 (Quality -> .)
    SIX_NINE        reduce using rule 8 (Quality -> .)
    MAJ             reduce using rule 8 (Quality -> .)
    TWO             reduce using rule 8 (Quality -> .)
    THREE           reduce using rule 8 (Quality -> .)
    FOUR            reduce using rule 8 (Quality -> .)
    FIVE            reduce using rule 8 (Quality -> .)
    SIX             reduce using rule 8 (Quality -> .)
    SEVEN           reduce using rule 8 (Quality -> .)
    NINE            reduce using rule 8 (Quality -> .)
    ELEVEN          reduce using rule 8 (Quality -> .)
    THIRTEEN        reduce using rule 8 (Quality -> .)
    PITCH           reduce using rule 8 (Quality -> .)
    $end            reduce using rule 8 (Quality -> .)

    Quality                        shift and go to state 5

state 4

    (2) Pitch -> PITCH .

    MIN             reduce using rule 2 (Pitch -> PITCH .)
    AUG             reduce using rule 2 (Pitch -> PITCH .)
    DIM             reduce using rule 2 (Pitch -> PITCH .)
    HALF_DIM7       reduce using rule 2 (Pitch -> PITCH .)
    SLASH           reduce using rule 2 (Pitch -> PITCH .)
    SUS             reduce using rule 2 (Pitch -> PITCH .)
    ADD             reduce using rule 2 (Pitch -> PITCH .)
    OMIT            reduce using rule 2 (Pitch -> PITCH .)
    LPAREN          reduce using rule 2 (Pitch -> PITCH .)
    SIX_NINE        reduce using rule 2 (Pitch -> PITCH .)
    MAJ             reduce using rule 2 (Pitch -> PITCH .)
    TWO             reduce using rule 2 (Pitch -> PITCH .)
    THREE           reduce using rule 2 (Pitch -> PITCH .)
    FOUR            reduce using rule 2 (Pitch -> PITCH .)
    FIVE            reduce using rule 2 (Pitch -> PITCH .)
    SIX             reduce using rule 2 (Pitch -> PITCH .)
    SEVEN           reduce using rule 2 (Pitch -> PITCH .)
    NINE            reduce using rule 2 (Pitch -> PITCH .)
    ELEVEN          reduce using rule 2 (Pitch -> PITCH .)
    THIRTEEN        reduce using rule 2 (Pitch -> PITCH .)
    PITCH           reduce using rule 2 (Pitch -> PITCH .)
    $end            reduce using rule 2 (Pitch -> PITCH .)


state 5

    (1) All -> NOTE Pitch Quality . Elements Inversion
    (9) Elements -> . Elements Element
    (10) Elements -> .

    SLASH           reduce using rule 10 (Elements -> .)
    SUS             reduce using rule 10 (Elements -> .)
    ADD             reduce using rule 10 (Elements -> .)
    OMIT            reduce using rule 10 (Elements -> .)
    LPAREN          reduce using rule 10 (Elements -> .)
    SIX_NINE        reduce using rule 10 (Elements -> .)
    MAJ             reduce using rule 10 (Elements -> .)
    TWO             reduce using rule 10 (Elements -> .)
    THREE           reduce using rule 10 (Elements -> .)
    FOUR            reduce using rule 10 (Elements -> .)
    FIVE            reduce using rule 10 (Elements -> .)
    SIX             reduce using rule 10 (Elements -> .)
    SEVEN           reduce using rule 10 (Elements -> .)
    NINE            reduce using rule 10 (Elements -> .)
    ELEVEN          reduce using rule 10 (Elements -> .)
    THIRTEEN        reduce using rule 10 (Elements -> .)
    PITCH           reduce using rule 10 (Elements -> .)
    $end            reduce using rule 10 (Elements -> .)

    Elements                       shift and go to state 10

state 6

    (4) Quality -> MIN .

    SLASH           reduce using rule 4 (Quality -> MIN .)
    SUS             reduce using rule 4 (Quality -> MIN .)
    ADD             reduce using rule 4 (Quality -> MIN .)
    OMIT            reduce using rule 4 (Quality -> MIN .)
    LPAREN          reduce using rule 4 (Quality -> MIN .)
    SIX_NINE        reduce using rule 4 (Quality -> MIN .)
    MAJ             reduce using rule 4 (Quality -> MIN .)
    TWO             reduce using rule 4 (Quality -> MIN .)
    THREE           reduce using rule 4 (Quality -> MIN .)
    FOUR            reduce using rule 4 (Quality -> MIN .)
    FIVE            reduce using rule 4 (Quality -> MIN .)
    SIX             reduce using rule 4 (Quality -> MIN .)
    SEVEN           reduce using rule 4 (Quality -> MIN .)
    NINE            reduce using rule 4 (Quality -> MIN .)
    ELEVEN          reduce using rule 4 (Quality -> MIN .)
    THIRTEEN        reduce using rule 4 (Quality -> MIN .)
    PITCH           reduce using rule 4 (Quality -> MIN .)
    $end            reduce using rule 4 (Quality -> MIN .)


state 7

    (5) Quality -> AUG .

    SLASH           reduce using rule 5 (Quality -> AUG .)
    SUS             reduce using rule 5 (Quality -> AUG .)
    ADD             reduce using rule 5 (Quality -> AUG .)
    OMIT            reduce using rule 5 (Quality -> AUG .)
    LPAREN          reduce using rule 5 (Quality -> AUG .)
    SIX_NINE        reduce using rule 5 (Quality -> AUG .)
    MAJ             reduce using rule 5 (Quality -> AUG .)
    TWO             reduce using rule 5 (Quality -> AUG .)
    THREE           reduce using rule 5 (Quality -> AUG .)
    FOUR            reduce using rule 5 (Quality -> AUG .)
    FIVE            reduce using rule 5 (Quality -> AUG .)
    SIX             reduce using rule 5 (Quality -> AUG .)
    SEVEN           reduce using rule 5 (Quality -> AUG .)
    NINE            reduce using rule 5 (Quality -> AUG .)
    ELEVEN          reduce using rule 5 (Quality -> AUG .)
    THIRTEEN        reduce using rule 5 (Quality -> AUG .)
    PITCH           reduce using rule 5 (Quality -> AUG .)
    $end            reduce using rule 5 (Quality -> AUG .)


state 8

    (6) Quality -> DIM .

    SLASH           reduce using rule 6 (Quality -> DIM .)
    SUS             reduce using rule 6 (Quality -> DIM .)
    ADD             reduce using rule 6 (Quality -> DIM .)
    OMIT            reduce using rule 6 (Quality -> DIM .)
    LPAREN          reduce using rule 6 (Quality -> DIM .)
    SIX_NINE        reduce using rule 6 (Quality -> DIM .)
    MAJ             reduce using rule 6 (Quality -> DIM .)
    TWO             reduce using rule 6 (Quality -> DIM .)
    THREE           reduce using rule 6 (Quality -> DIM .)
    FOUR            reduce using rule 6 (Quality -> DIM .)
    FIVE            reduce using rule 6 (Quality -> DIM .)
    SIX             reduce using rule 6 (Quality -> DIM .)
    SEVEN           reduce using rule 6 (Quality -> DIM .)
    NINE            reduce using rule 6 (Quality -> DIM .)
    ELEVEN          reduce using rule 6 (Quality -> DIM .)
    THIRTEEN        reduce using rule 6 (Quality -> DIM .)
    PITCH           reduce using rule 6 (Quality -> DIM .)
    $end            reduce using rule 6 (Quality -> DIM .)


state 9

    (7) Quality -> HALF_DIM7 .

    SLASH           reduce using rule 7 (Quality -> HALF_DIM7 .)
    SUS             reduce using rule 7 (Quality -> HALF_DIM7 .)
    ADD             reduce using rule 7 (Quality -> HALF_DIM7 .)
    OMIT            reduce using rule 7 (Quality -> HALF_DIM7 .)
    LPAREN          reduce using rule 7 (Quality -> HALF_DIM7 .)
    SIX_NINE        reduce using rule 7 (Quality -> HALF_DIM7 .)
    MAJ             reduce using rule 7 (Quality -> HALF_DIM7 .)
    TWO             reduce using rule 7 (Quality -> HALF_DIM7 .)
    THREE           reduce using rule 7 (Quality -> HALF_DIM7 .)
    FOUR            reduce using rule 7 (Quality -> HALF_DIM7 .)
    FIVE            reduce using rule 7 (Quality -> HALF_DIM7 .)
    SIX             reduce using rule 7 (Quality -> HALF_DIM7 .)
    SEVEN           reduce using rule 7 (Quality -> HALF_DIM7 .)
    NINE            reduce using rule 7 (Quality -> HALF_DIM7 .)
    ELEVEN          reduce using rule 7 (Quality -> HALF_DIM7 .)
    THIRTEEN        reduce using rule 7 (Quality -> HALF_DIM7 .)
    PITCH           reduce using rule 7 (Quality -> HALF_DIM7 .)
    $end            reduce using rule 7 (Quality -> HALF_DIM7 .)


state 10

    (1) All -> NOTE Pitch Quality Elements . Inversion
    (9) Elements -> Elements . Element
    (50) Inversion -> . SLASH NOTE
    (51) Inversion -> . SLASH NOTE PITCH
    (52) Inversion -> .
    (11) Element -> . SUS SusAux
    (12) Element -> . ADD AddAux
    (13) Element -> . OMIT OmitAux
    (14) Element -> . LPAREN SetElems RPAREN
    (15) Element -> . SIX_NINE
    (16) Element -> . MAJ MajorType
    (17) Element -> . Number
    (18) Element -> . PitchNumber
    (24) Number -> . TWO
    (25) Number -> . THREE
    (26) Number -> . FOUR
    (27) Number -> . FIVE
    (28) Number -> . SIX
    (29) Number -> . SEVEN
    (30) Number -> . NINE
    (31) Number -> . ELEVEN
    (32) Number -> . THIRTEEN
    (23) PitchNumber -> . PITCH Number

    SLASH           shift and go to state 13
    $end            reduce using rule 52 (Inversion -> .)
    SUS             shift and go to state 15
    ADD             shift and go to state 16
    OMIT            shift and go to state 17
    LPAREN          shift and go to state 18
    SIX_NINE        shift and go to state 19
    MAJ             shift and go to state 20
    TWO             shift and go to state 23
    THREE           shift and go to state 24
    FOUR            shift and go to state 25
    FIVE            shift and go to state 26
    SIX             shift and go to state 27
    SEVEN           shift and go to state 28
    NINE            shift and go to state 29
    ELEVEN          shift and go to state 30
    THIRTEEN        shift and go to state 31
    PITCH           shift and go to state 14

    Inversion                      shift and go to state 11
    Element                        shift and go to state 12
    Number                         shift and go to state 21
    PitchNumber                    shift and go to state 22

state 11

    (1) All -> NOTE Pitch Quality Elements Inversion .

    $end            reduce using rule 1 (All -> NOTE Pitch Quality Elements Inversion .)


state 12

    (9) Elements -> Elements Element .

    SLASH           reduce using rule 9 (Elements -> Elements Element .)
    SUS             reduce using rule 9 (Elements -> Elements Element .)
    ADD             reduce using rule 9 (Elements -> Elements Element .)
    OMIT            reduce using rule 9 (Elements -> Elements Element .)
    LPAREN          reduce using rule 9 (Elements -> Elements Element .)
    SIX_NINE        reduce using rule 9 (Elements -> Elements Element .)
    MAJ             reduce using rule 9 (Elements -> Elements Element .)
    TWO             reduce using rule 9 (Elements -> Elements Element .)
    THREE           reduce using rule 9 (Elements -> Elements Element .)
    FOUR            reduce using rule 9 (Elements -> Elements Element .)
    FIVE            reduce using rule 9 (Elements -> Elements Element .)
    SIX             reduce using rule 9 (Elements -> Elements Element .)
    SEVEN           reduce using rule 9 (Elements -> Elements Element .)
    NINE            reduce using rule 9 (Elements -> Elements Element .)
    ELEVEN          reduce using rule 9 (Elements -> Elements Element .)
    THIRTEEN        reduce using rule 9 (Elements -> Elements Element .)
    PITCH           reduce using rule 9 (Elements -> Elements Element .)
    $end            reduce using rule 9 (Elements -> Elements Element .)


state 13

    (50) Inversion -> SLASH . NOTE
    (51) Inversion -> SLASH . NOTE PITCH

    NOTE            shift and go to state 32


state 14

    (23) PitchNumber -> PITCH . Number
    (24) Number -> . TWO
    (25) Number -> . THREE
    (26) Number -> . FOUR
    (27) Number -> . FIVE
    (28) Number -> . SIX
    (29) Number -> . SEVEN
    (30) Number -> . NINE
    (31) Number -> . ELEVEN
    (32) Number -> . THIRTEEN

    TWO             shift and go to state 23
    THREE           shift and go to state 24
    FOUR            shift and go to state 25
    FIVE            shift and go to state 26
    SIX             shift and go to state 27
    SEVEN           shift and go to state 28
    NINE            shift and go to state 29
    ELEVEN          shift and go to state 30
    THIRTEEN        shift and go to state 31

    Number                         shift and go to state 33

state 15

    (11) Element -> SUS . SusAux
    (33) SusAux -> . PITCH SusNumber
    (34) SusAux -> . SusNumber
    (35) SusNumber -> . TWO
    (36) SusNumber -> . FOUR

    PITCH           shift and go to state 35
    TWO             shift and go to state 37
    FOUR            shift and go to state 38

    SusAux                         shift and go to state 34
    SusNumber                      shift and go to state 36

state 16

    (12) Element -> ADD . AddAux
    (37) AddAux -> . TWO
    (38) AddAux -> . FOUR
    (39) AddAux -> . SIX
    (40) AddAux -> . NINE
    (41) AddAux -> . ELEVEN
    (42) AddAux -> . THIRTEEN

    TWO             shift and go to state 40
    FOUR            shift and go to state 41
    SIX             shift and go to state 42
    NINE            shift and go to state 43
    ELEVEN          shift and go to state 44
    THIRTEEN        shift and go to state 45

    AddAux                         shift and go to state 39

state 17

    (13) Element -> OMIT . OmitAux
    (43) OmitAux -> . THREE
    (44) OmitAux -> . FIVE

    THREE           shift and go to state 47
    FIVE            shift and go to state 48

    OmitAux                        shift and go to state 46

state 18

    (14) Element -> LPAREN . SetElems RPAREN
    (45) SetElems -> . SetElems COMMA SetElem
    (46) SetElems -> . SetElem
    (47) SetElem -> . PITCH Number
    (48) SetElem -> . Number
    (49) SetElem -> . OMIT OmitAux
    (24) Number -> . TWO
    (25) Number -> . THREE
    (26) Number -> . FOUR
    (27) Number -> . FIVE
    (28) Number -> . SIX
    (29) Number -> . SEVEN
    (30) Number -> . NINE
    (31) Number -> . ELEVEN
    (32) Number -> . THIRTEEN

    PITCH           shift and go to state 51
    OMIT            shift and go to state 53
    TWO             shift and go to state 23
    THREE           shift and go to state 24
    FOUR            shift and go to state 25
    FIVE            shift and go to state 26
    SIX             shift and go to state 27
    SEVEN           shift and go to state 28
    NINE            shift and go to state 29
    ELEVEN          shift and go to state 30
    THIRTEEN        shift and go to state 31

    SetElems                       shift and go to state 49
    SetElem                        shift and go to state 50
    Number                         shift and go to state 52

state 19

    (15) Element -> SIX_NINE .

    SLASH           reduce using rule 15 (Element -> SIX_NINE .)
    SUS             reduce using rule 15 (Element -> SIX_NINE .)
    ADD             reduce using rule 15 (Element -> SIX_NINE .)
    OMIT            reduce using rule 15 (Element -> SIX_NINE .)
    LPAREN          reduce using rule 15 (Element -> SIX_NINE .)
    SIX_NINE        reduce using rule 15 (Element -> SIX_NINE .)
    MAJ             reduce using rule 15 (Element -> SIX_NINE .)
    TWO             reduce using rule 15 (Element -> SIX_NINE .)
    THREE           reduce using rule 15 (Element -> SIX_NINE .)
    FOUR            reduce using rule 15 (Element -> SIX_NINE .)
    FIVE            reduce using rule 15 (Element -> SIX_NINE .)
    SIX             reduce using rule 15 (Element -> SIX_NINE .)
    SEVEN           reduce using rule 15 (Element -> SIX_NINE .)
    NINE            reduce using rule 15 (Element -> SIX_NINE .)
    ELEVEN          reduce using rule 15 (Element -> SIX_NINE .)
    THIRTEEN        reduce using rule 15 (Element -> SIX_NINE .)
    PITCH           reduce using rule 15 (Element -> SIX_NINE .)
    $end            reduce using rule 15 (Element -> SIX_NINE .)


state 20

    (16) Element -> MAJ . MajorType
    (19) MajorType -> . SEVEN
    (20) MajorType -> . NINE
    (21) MajorType -> . ELEVEN
    (22) MajorType -> . THIRTEEN

    SEVEN           shift and go to state 55
    NINE            shift and go to state 56
    ELEVEN          shift and go to state 57
    THIRTEEN        shift and go to state 58

    MajorType                      shift and go to state 54

state 21

    (17) Element -> Number .

    SLASH           reduce using rule 17 (Element -> Number .)
    SUS             reduce using rule 17 (Element -> Number .)
    ADD             reduce using rule 17 (Element -> Number .)
    OMIT            reduce using rule 17 (Element -> Number .)
    LPAREN          reduce using rule 17 (Element -> Number .)
    SIX_NINE        reduce using rule 17 (Element -> Number .)
    MAJ             reduce using rule 17 (Element -> Number .)
    TWO             reduce using rule 17 (Element -> Number .)
    THREE           reduce using rule 17 (Element -> Number .)
    FOUR            reduce using rule 17 (Element -> Number .)
    FIVE            reduce using rule 17 (Element -> Number .)
    SIX             reduce using rule 17 (Element -> Number .)
    SEVEN           reduce using rule 17 (Element -> Number .)
    NINE            reduce using rule 17 (Element -> Number .)
    ELEVEN          reduce using rule 17 (Element -> Number .)
    THIRTEEN        reduce using rule 17 (Element -> Number .)
    PITCH           reduce using rule 17 (Element -> Number .)
    $end            reduce using rule 17 (Element -> Number .)


state 22

    (18) Element -> PitchNumber .

    SLASH           reduce using rule 18 (Element -> PitchNumber .)
    SUS             reduce using rule 18 (Element -> PitchNumber .)
    ADD             reduce using rule 18 (Element -> PitchNumber .)
    OMIT            reduce using rule 18 (Element -> PitchNumber .)
    LPAREN          reduce using rule 18 (Element -> PitchNumber .)
    SIX_NINE        reduce using rule 18 (Element -> PitchNumber .)
    MAJ             reduce using rule 18 (Element -> PitchNumber .)
    TWO             reduce using rule 18 (Element -> PitchNumber .)
    THREE           reduce using rule 18 (Element -> PitchNumber .)
    FOUR            reduce using rule 18 (Element -> PitchNumber .)
    FIVE            reduce using rule 18 (Element -> PitchNumber .)
    SIX             reduce using rule 18 (Element -> PitchNumber .)
    SEVEN           reduce using rule 18 (Element -> PitchNumber .)
    NINE            reduce using rule 18 (Element -> PitchNumber .)
    ELEVEN          reduce using rule 18 (Element -> PitchNumber .)
    THIRTEEN        reduce using rule 18 (Element -> PitchNumber .)
    PITCH           reduce using rule 18 (Element -> PitchNumber .)
    $end            reduce using rule 18 (Element -> PitchNumber .)


state 23

    (24) Number -> TWO .

    SLASH           reduce using rule 24 (Number -> TWO .)
    SUS             reduce using rule 24 (Number -> TWO .)
    ADD             reduce using rule 24 (Number -> TWO .)
    OMIT            reduce using rule 24 (Number -> TWO .)
    LPAREN          reduce using rule 24 (Number -> TWO .)
    SIX_NINE        reduce using rule 24 (Number -> TWO .)
    MAJ             reduce using rule 24 (Number -> TWO .)
    TWO             reduce using rule 24 (Number -> TWO .)
    THREE           reduce using rule 24 (Number -> TWO .)
    FOUR            reduce using rule 24 (Number -> TWO .)
    FIVE            reduce using rule 24 (Number -> TWO .)
    SIX             reduce using rule 24 (Number -> TWO .)
    SEVEN           reduce using rule 24 (Number -> TWO .)
    NINE            reduce using rule 24 (Number -> TWO .)
    ELEVEN          reduce using rule 24 (Number -> TWO .)
    THIRTEEN        reduce using rule 24 (Number -> TWO .)
    PITCH           reduce using rule 24 (Number -> TWO .)
    $end            reduce using rule 24 (Number -> TWO .)
    RPAREN          reduce using rule 24 (Number -> TWO .)
    COMMA           reduce using rule 24 (Number -> TWO .)


state 24

    (25) Number -> THREE .

    SLASH           reduce using rule 25 (Number -> THREE .)
    SUS             reduce using rule 25 (Number -> THREE .)
    ADD             reduce using rule 25 (Number -> THREE .)
    OMIT            reduce using rule 25 (Number -> THREE .)
    LPAREN          reduce using rule 25 (Number -> THREE .)
    SIX_NINE        reduce using rule 25 (Number -> THREE .)
    MAJ             reduce using rule 25 (Number -> THREE .)
    TWO             reduce using rule 25 (Number -> THREE .)
    THREE           reduce using rule 25 (Number -> THREE .)
    FOUR            reduce using rule 25 (Number -> THREE .)
    FIVE            reduce using rule 25 (Number -> THREE .)
    SIX             reduce using rule 25 (Number -> THREE .)
    SEVEN           reduce using rule 25 (Number -> THREE .)
    NINE            reduce using rule 25 (Number -> THREE .)
    ELEVEN          reduce using rule 25 (Number -> THREE .)
    THIRTEEN        reduce using rule 25 (Number -> THREE .)
    PITCH           reduce using rule 25 (Number -> THREE .)
    $end            reduce using rule 25 (Number -> THREE .)
    RPAREN          reduce using rule 25 (Number -> THREE .)
    COMMA           reduce using rule 25 (Number -> THREE .)


state 25

    (26) Number -> FOUR .

    SLASH           reduce using rule 26 (Number -> FOUR .)
    SUS             reduce using rule 26 (Number -> FOUR .)
    ADD             reduce using rule 26 (Number -> FOUR .)
    OMIT            reduce using rule 26 (Number -> FOUR .)
    LPAREN          reduce using rule 26 (Number -> FOUR .)
    SIX_NINE        reduce using rule 26 (Number -> FOUR .)
    MAJ             reduce using rule 26 (Number -> FOUR .)
    TWO             reduce using rule 26 (Number -> FOUR .)
    THREE           reduce using rule 26 (Number -> FOUR .)
    FOUR            reduce using rule 26 (Number -> FOUR .)
    FIVE            reduce using rule 26 (Number -> FOUR .)
    SIX             reduce using rule 26 (Number -> FOUR .)
    SEVEN           reduce using rule 26 (Number -> FOUR .)
    NINE            reduce using rule 26 (Number -> FOUR .)
    ELEVEN          reduce using rule 26 (Number -> FOUR .)
    THIRTEEN        reduce using rule 26 (Number -> FOUR .)
    PITCH           reduce using rule 26 (Number -> FOUR .)
    $end            reduce using rule 26 (Number -> FOUR .)
    RPAREN          reduce using rule 26 (Number -> FOUR .)
    COMMA           reduce using rule 26 (Number -> FOUR .)


state 26

    (27) Number -> FIVE .

    SLASH           reduce using rule 27 (Number -> FIVE .)
    SUS             reduce using rule 27 (Number -> FIVE .)
    ADD             reduce using rule 27 (Number -> FIVE .)
    OMIT            reduce using rule 27 (Number -> FIVE .)
    LPAREN          reduce using rule 27 (Number -> FIVE .)
    SIX_NINE        reduce using rule 27 (Number -> FIVE .)
    MAJ             reduce using rule 27 (Number -> FIVE .)
    TWO             reduce using rule 27 (Number -> FIVE .)
    THREE           reduce using rule 27 (Number -> FIVE .)
    FOUR            reduce using rule 27 (Number -> FIVE .)
    FIVE            reduce using rule 27 (Number -> FIVE .)
    SIX             reduce using rule 27 (Number -> FIVE .)
    SEVEN           reduce using rule 27 (Number -> FIVE .)
    NINE            reduce using rule 27 (Number -> FIVE .)
    ELEVEN          reduce using rule 27 (Number -> FIVE .)
    THIRTEEN        reduce using rule 27 (Number -> FIVE .)
    PITCH           reduce using rule 27 (Number -> FIVE .)
    $end            reduce using rule 27 (Number -> FIVE .)
    RPAREN          reduce using rule 27 (Number -> FIVE .)
    COMMA           reduce using rule 27 (Number -> FIVE .)


state 27

    (28) Number -> SIX .
